src/src/objects/TRANSACTION__c.object
<CustomObject>
    <fields>
        <fullName>INCOME_TAX__c</fullName>
        <label>INCOME TAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRANSACTIONNAME__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>TRANSACTIONS</relationshipLabel>
        <relationshipName>TRANSACTIONS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>transaction_pick__c</fullName>
        <label>Transaction Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>offline payment</fullName>
                </value>
                <value>
                    <fullName>onlinepayment</fullName>
                </value>
                <value>
                    <fullName>cardpayment</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TRANSACTION</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TRANSACTION Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TRANSACTIONS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>